small fix for FindBugs